<resources>
    <string name="app_name">Reload Manager Mobile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">RM Mobile</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_profil">Profil</string>
    <string name="nav_list_rute">List Rute</string>
    <string name="nav_maps">Peta Rute</string>
    <string name="nav_sell">Transaksi Penjualan M-Kios</string>
    <string name="nav_mkios">Info M-Kios</string>
    <string name="nav_laporan">Laporan</string>
    <string name="action_option">Option</string>
    <string name="action_sync">Sync</string>
    <string name="action_logout">Logout</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!-- Strings related to customer activity -->
    <string name="title_activity_customer">Select customer</string>
    <string name="default_email">tono.purwanto@live.com</string>
    <string name="default_password">makanan</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="person_image">person image</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_log_in">Login</string>
    <string name="btn_log_in_loading">Please wait...</string>
    <string name="new_account">Don\'t have an Account ?</string>
    <string name="txt_sign_up"><u>Sign Up</u></string>
    <string name="signup_info">Reload Manager Mobile akan mengirimkan pesan SMS satu kali untuk memverifikasi nomor ponsel Anda. Biaya SMS Operator mungkin berlaku.</string>
    <string name="signup_phone">Mohon masukkan nomor telepon Anda.</string>
    <string name="signup_verification">Menunggu pendeteksian otomatis untuk sms yang dikirim ke +62xxxxxx. Nomor salah?</string>
    <string name="signup_button">Ok</string>
    <string name="image_logo_big">imageLogoBig</string>
    <string name="action_done">Done</string>
</resources>
